# directory-to-zfs-dataset-truenas

./: .gitignore  CLAUDE.md  README.md  benchmark.sh  conftest.py  pyproject.toml  test_zfs_migration.py  zfs_migration.py
docs/: how-it-works.md
